# galapagos

./: configure.ac
src/: Makefile.am  app.cpp  app.hpp  clone-repository-dialog.cpp  clone-repository-dialog.hpp  commit.cpp  commit.hpp  create-repository-dialog.cpp  create-repository-dialog.hpp  frame.cpp  frame.hpp  history-detail-panel.cpp  history-detail-panel.hpp  history-panel.cpp  history-panel.hpp  remotes-panel.cpp  remotes-panel.hpp  repository-properties-dialog.cpp  repository-properties-dialog.hpp
